<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="arrow">Стрелка</string>
    <string name="theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support_app">Написать в поддержку</string>
    <string name="agreement_app">Пользовательское соглашение</string>
    <string name="practicum_website">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="mail">alina.spring.sadrtdinova@gmail.com</string>
    <string name="title_of_mail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="content_of_mail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_of_website">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="track_name">Имя Трека</string>
    <string name="artist_name">Имя Артиста</string>
    <string name="track_time">Длительность трека</string>
    <string name="track1">Smells Like Teen Spirit</string>
    <string name="artist1">Nirvana</string>
    <string name="time1">5:01</string>
    <string name="url1">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>
    <string name="track2">Billie Jean</string>
    <string name="artist2">Michael Jackson</string>
    <string name="time2">4:35</string>
    <string name="url2">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>
    <string name="track3">Stayin\' Alive</string>
    <string name="artist3">Bee Gees</string>
    <string name="time3">4:10</string>
    <string name="url3">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg"</string>
    <string name="track4">Whole Lotta Love</string>
    <string name="artist4">Led Zeppelin</string>
    <string name="time4">5:33</string>
    <string name="url4">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>
    <string name="track5">Sweet Child O\'Mine</string>
    <string name="artist5">Guns N\' Roses</string>
    <string name="time5">5:03</string>
    <string name="url5">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>
</resources>