<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        >

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"

        app:icon="@drawable/ic_arrow_back_24"
        app:iconGravity="textStart"
        app:iconTint="?attr/colorSecondary"
        app:iconSize="@dimen/iconSize"
        android:backgroundTint="?attr/colorPrimary"
        android:contentDescription="@string/arrow"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textSize="@dimen/textSize"
            android:textColor="?attr/colorSecondary"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="400"
            android:layout_marginTop="16dp"
            />
    </LinearLayout>

    <FrameLayout
        android:layout_marginHorizontal="16dp"
        style="@style/FrameLayoutStyleInSettings">

        <TextView
            style="@style/TextViewStyleInSettings"
            android:text="@string/theme"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            app:trackTint="?attr/colorSecondaryVariant"
            app:thumbTint="?attr/colorOnPrimary"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_marginHorizontal="16dp"
        style="@style/FrameLayoutStyleInSettings"
        android:id="@+id/shareButton"
        >

        <TextView
            style="@style/TextViewStyleInSettings"
            android:text="@string/share_app"
            />

        <ImageView
            style="@style/ImageViewStyleInSettings"
            android:src="@drawable/ic_share_app_24"
             />
    </FrameLayout>

    <FrameLayout
        android:layout_marginHorizontal="16dp"
        style="@style/FrameLayoutStyleInSettings"
        android:id="@+id/supportButton"
        >

        <TextView
            style="@style/TextViewStyleInSettings"
            android:text="@string/support_app"
            />

        <ImageView
            style="@style/ImageViewStyleInSettings"
            android:src="@drawable/ic_support_24"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_marginHorizontal="16dp"
        style="@style/FrameLayoutStyleInSettings"
        android:id="@+id/agreementButton"
        >

        <TextView
            style="@style/TextViewStyleInSettings"
            android:text="@string/agreement_app"
            android:textColor="?attr/colorSecondary"
            />

        <ImageView
            style="@style/ImageViewStyleInSettings"
            android:src="@drawable/ic_arrow_small_24"
            />
    </FrameLayout>
</LinearLayout>