<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/settings"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".settings.ui.fragment.SettingsFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp"
        android:padding="16dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textSize="@dimen/textSize"
            android:textColor="?attr/colorSecondary"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="400"
            />
    </LinearLayout>

    <FrameLayout
        android:layout_marginHorizontal="16dp"
        style="@style/FrameLayoutStyleInSettings">

        <TextView
            style="@style/TextViewStyleInSettings"
            android:text="@string/theme"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            app:trackTint="?attr/colorSecondaryVariant"
            app:thumbTint="?attr/colorOnPrimary"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/shareButton"
        android:layout_marginHorizontal="16dp"
        style="@style/FrameLayoutStyleInSettings"
        >

        <TextView
            style="@style/TextViewStyleInSettings"
            android:text="@string/share_app"
            />

        <ImageView
            style="@style/ImageViewStyleInSettings"
            android:src="@drawable/ic_share_app_24"
             />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/supportButton"
        android:layout_marginHorizontal="16dp"
        style="@style/FrameLayoutStyleInSettings"
        >

        <TextView
            style="@style/TextViewStyleInSettings"
            android:text="@string/support_app"
            />

        <ImageView
            style="@style/ImageViewStyleInSettings"
            android:src="@drawable/ic_support_24"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/agreementButton"
        android:layout_marginHorizontal="16dp"
        style="@style/FrameLayoutStyleInSettings"
        >

        <TextView
            style="@style/TextViewStyleInSettings"
            android:text="@string/agreement_app"
            android:textColor="?attr/colorSecondary"
            />

        <ImageView
            style="@style/ImageViewStyleInSettings"
            android:src="@drawable/ic_arrow_small_24"
            />
    </FrameLayout>
</LinearLayout>