<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="40dp"
        android:text="Playlist maker"
        android:textColor="@color/YP_White"
        android:textSize="@dimen/textSize" />

    <com.google.android.material.button.MaterialButton
        style="@style/MaterialButtonStyleInMain"
        android:id="@+id/search"
        android:text="@string/search"
        app:icon="@drawable/ic_magnifier_24" />

    <com.google.android.material.button.MaterialButton
        style="@style/MaterialButtonStyleInMain"
        android:id="@+id/media_library"
        android:text="@string/media_library"
        app:icon="@drawable/ic_note_24"
        />

    <com.google.android.material.button.MaterialButton
        style="@style/MaterialButtonStyleInMain"
        android:layout_marginBottom="28dp"
        android:id="@+id/settings"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings_24"
        />

</LinearLayout>