<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:background="?attr/colorPrimary">
    
    <ImageView
        android:id="@+id/artworkUrl100"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_default_45">
    </ImageView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">
        
        <TextView
            android:id="@+id/trackName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:textSize="16sp"
            android:textColor="?attr/colorSecondary"
            android:text="@string/track_name">
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:orientation="horizontal">
            
            <TextView
                android:id="@+id/artistName"
                android:layout_weight="1"
                style="@style/TextViewInTrackExample"
                android:text="@string/artist_name">
            </TextView>

            <ImageView
                style="@style/ImageViewPointStyle">
            </ImageView>

            <TextView
                android:id="@+id/trackTime"
                style="@style/TextViewInTrackExample"
                android:ellipsize="none"
                android:text="@string/track_time">
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        style="@style/IconArrowSmallInSearch">
    </ImageView>

</LinearLayout>