<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginHorizontal="16dp"
    android:id="@+id/main"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="-16dp">

        <com.google.android.material.button.MaterialButton

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:id="@+id/back"
            style="@style/Widget.MaterialComponents.Button.TextButton"

            app:icon="@drawable/ic_arrow_back_24"
            app:iconGravity="textStart"
            app:iconTint="@color/YP_Black"
            app:iconSize="@dimen/iconSize"
            android:backgroundTint="@color/YP_White"
            android:contentDescription="@string/arrow"/>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textSize="@dimen/textSize"
            android:textColor="@color/YP_Black"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="400"
            android:layout_marginTop="16dp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="5">

        <FrameLayout
            style="@style/FrameLayoutStyleInSettings"
            >

            <TextView
                style="@style/TextViewStyleInSettings"
                android:text="@string/share_app"
                />

            <ImageView
                style="@style/ImageViewStyleInSettings"
                android:src="@drawable/ic_share_app_24"
                />
        </FrameLayout>

        <FrameLayout
            style="@style/FrameLayoutStyleInSettings"
            >

            <TextView
                style="@style/TextViewStyleInSettings"
                android:text="@string/share_app"
                android:textColor="?attr/colorSecondaryVariant"
                />

            <ImageView
                style="@style/ImageViewStyleInSettings"
                android:src="@drawable/ic_share_app_24"
                />
        </FrameLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="3">

    </LinearLayout>

</LinearLayout>